--- a/pages/me.html
+++ b/pages/me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<html>
+<html lang="en">
 
 <!-- This is the HEADER section.......................... -->
 
@@ -11,10 +11,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../default.css">
   <link rel="stylesheet" href="../header.css">
+  <link rel="stylesheet" href="../footer.css">
   <link rel='stylesheet' href='me.css'>
+  <script> 
+    window.twttr = (function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0],
+        t = window.twttr || {};
+      if (d.getElementById(id)) return t;
+      js = d.createElement(s);
+      js.id = id;
+      js.src = "https://platform.twitter.com/widgets.js";
+      fjs.parentNode.insertBefore(js, fjs);
+  
+      t._e = [];
+      t.ready = function (f) {
+        t._e.push(f);
+      };
+  
+      return t;
+    }(document, "script", "twitter-wjs"));</script>
+  
 </head>
+<!-- This is the BODY section -->
+<!-- The script for twitter api -->
+
+<body>
 <!-- The header section -->
 <header class="main-header">
+  <!-- remember to include the js function for view btn -->
+  <script src="../view.js"></script>
   <!-- Logo and navigation menu section -->
   <div class="header-logo">
     <img src="../img/icon.png" alt="my logo">
@@ -29,13 +54,18 @@
     <nav class="header-nav">
       <ul>
         <li><a href="sitemap.html">HOME</a></li>
-        <li><a href="../image gallery/gallery.html">GALLERY</a></li>
+        <li><a href="../image%20gallery/gallery.html">GALLERY</a></li>
         <li><a href="https://wangzhen-ryan.github.io">PORTFOLIO</a></li>
         <li><a href="me.html">ABOUT ME</a></li>
         <li><a href="feedback.html">CONTACT</a></li>
       </ul>
     </nav>
   </div>
+
+  <div class ="btns">
+    <a onclick="myFunction()"> View </a>
+  </div>
+
   <!-- Social media links section -->
   <div class="header-social-media">
     <a href="https://www.facebook.com/zhen.wang.98229">
@@ -52,11 +82,25 @@
     </a>
   </div>
 </header>
+    <!-- add js for onlick event of hamburger-->
+    <script>
+      hamburger = document.querySelector(".hamburger");
+      hamburger.onclick = function () {
+          var html = document.getElementsByTagName('html')[0];
+          var body = document.getElementsByTagName('body')[0];
+          var all = [html, body];
+          all.forEach(element => {
+              element.classList.toggle("active");
+          });
+          navMenu = document.querySelector(".header-nav");
+          navMenu.classList.toggle("active");
+      }
+
+  </script>
+
 <!-- End of header section -->
 
-<!-- This is the BODY section -->
 
-<body>
 
   <!-- the meta api -->
   <div id="fb-root"></div>
@@ -68,88 +112,121 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
 
-  <div>
-    <div class="view1" id="biography">
+  <section id="me">
+    <div class="view">
+      <div class="view1" id="biography">
 
-      <h1> Biography </h1>
+        <h1> Biography </h1>
 
 
-      <!-- This is our introductory paragraph -->
+        <!-- This is our introductory paragraph -->
 
-      <p> Welcome to my personal portfolio! My name is Zhen Wang, also known as Ryan. I came to Australia four years ago
-        to pursue my undergraduate degree,
-        and I am now about to graduate with a Bachelor of Advanced Computing (Honours) from the Australian National
-        University.</p>
+        <p> Welcome to my personal portfolio! My name is Zhen Wang, also known as Ryan. I came to Australia four years
+          ago
+          to pursue my undergraduate degree,
+          and I am now about to graduate with a Bachelor of Advanced Computing (Honours) from the Australian National
+          University.</p>
 
-      <p>
+        <p>
 
-        This website is a showcase of my life, education, and work experience. I have a passion for data science and
-        machine learning,
-        and I am eager to launch my career in this field.
-        I hope to connect the dots of my journey over the past few years through a timeline that highlights my
-        achievements and milestones.</p>
+          This website is a showcase of my life, education, and work experience. I have a passion for data science and
+          machine learning,
+          and I am eager to launch my career in this field.
+          I hope to connect the dots of my journey over the past few years through a timeline that highlights my
+          achievements and milestones.</p>
 
-      <p>In addition to my work, I have a love for basketball and try to play it every day.
-        I used to go to the gym four times a week, but I have been neglecting this hobby lately due to my busy schedule.
-        I am trying to pick it up again because I believe it's easier to continue doing something than to start from
-        scratch.
-        I also enjoy hiking, although my options are limited in Canberra.
-        Thank you for visiting my website and learning more about me</p>
-      </p>
+        <p>In addition to my work, I have a love for basketball and try to play it every day.
+          I used to go to the gym four times a week, but I have been neglecting this hobby lately due to my busy
+          schedule.
+          I am trying to pick it up again because I believe it's easier to continue doing something than to start from
+          scratch.
+          I also enjoy hiking, although my options are limited in Canberra.
+          Thank you for visiting my website and learning more about me
+        </p>
 
-  
-      <!-- a collection of different api usage -->
-      <div class="api-button">
-        <h2> Follow Me</h2>
-        <a class="twitter-follow-button" href="https://twitter.com/WangZhen_Ryan" data-size="large"
-        data-show-screen-name=false>Follow @TwitterDev</a>
-        <a class="fb-share-button" data-href="https://www.facebook.com/zhen.wang.98229" data-layout="button"
-          data-size="large">
-        </a>
-        <div class="linkedin-share-button">
-          <script  src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
-          <script type="IN/Share" data-url="https://www.linkedin.com"></script>
+
+        <!-- a collection of different api usage -->
+        <div class="api-button">
+          <h2> Follow Me</h2>
+          <a class="twitter-follow-button" href="https://twitter.com/WangZhen_Ryan" data-size="large"
+            data-show-screen-name=false>Follow @TwitterDev</a>
+          <a class="fb-share-button" data-href="https://www.facebook.com/zhen.wang.98229" data-layout="button"
+            data-size="large">
+          </a>
+          <div class="linkedin-share-button">
+            <script src="https://platform.linkedin.com/in.js"></script>
+            <script type="IN/Share" data-url="https://www.linkedin.com"></script>
+          </div>
         </div>
+
+        <!-- contact section-->
+        <div class="more">
+          <h6>thanks for stopping by.
+            Still curious? <br>
+            → wangzhen-ryan@icloud.com</h6>
+          <h6>© Ryan Wang 2023</h6>
+        </div>
+
+
+        <!-- contact section-->
+        <div class="reflection">
+          <h2> Reflection</h2>
+          <a href="reflection.html"> Click here </a>
+        </div>
+
       </div>
 
-      <!-- contact section-->
-      <div class = "more">
-        <h6>thanks for stopping by.
-            Still curious? <br> 
-            → wangzhen-ryan@icloud.com</h6> 
-        <h6>© Ryan Wang 2023</h6>
+      <!-- This is the image section -->
+      <div class="view2" id="img-container">
+        <img src="../img/about.png" width="40" alt="me">
       </div>
-
-
-
     </div>
+  </section>
 
-    <!-- This is the image section -->
-    <div class="view2" id="img-container">
-      <img src="../img/about.png" width="40px">
+  <!-- Footer -->
+  <section id="footer">
+    <div class="footer container">
+      <div class="brand">
+        <h1>Wang Zhen</h1>
+      </div>
+      <h2>Thank you for visiting my Homepage. Leave me a feedback is encouraged.</h2>
+      <nav>
+        <div class="row-dir">
+          <div class="col-dir-top">
+            <h3 class="top-title-left">
+              <span>A3 Deliverables</span>
+            </h3>
+            <ul>
+              <li><a href="../assignment.html">assignment.html</a></li>
+              <li><a href="../pages/sitemap.html">Sitemap</a></li>
+              <li><a href="../pages/sourcelog.html">Sourcelog</a></li>
+              <li><a href="../pages/feedback.html">Feedback</a></li>
+              <li><a href="../pages/me.html">Me</a></li>
+              <li><a href="../image%20map%20more/map.html">image map</a></li>
+              <li><a href="../image%20gallery/gallery.html">image gallery</a></li>
+              <li><a href="../validation/">Validation</a></li>
+            </ul>
+          </div>
+
+          <div class="col-dir-bottom">
+            <h3 class="top-title-right">
+              <span>Homepage</span>
+            </h3>
+            <ul>
+              <li><a href="https://wangzhen-ryan.github.io">Portfolio</a></li>
+              <li><a href="../image%20gallery/gallery.html">Life</a></li>
+              <li><a href="ToDoList.html">ToDoList</a></li>
+              <li><a href="../pages/feeds.html">Work</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </nav>
+
+      <p>Copyright © 2023 Zhen Wang. All rights reserved</p>
     </div>
-  </div>
-
+  </section>
+  <!-- End Footer -->
 </body>
-<!-- The script for twitter api -->
-<script>window.twttr = (function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0],
-      t = window.twttr || {};
-    if (d.getElementById(id)) return t;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "https://platform.twitter.com/widgets.js";
-    fjs.parentNode.insertBefore(js, fjs);
-
-    t._e = [];
-    t.ready = function (f) {
-      t._e.push(f);
-    };
-
-    return t;
-  }(document, "script", "twitter-wjs"));</script>
-<div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_CN/sdk.js#xfbml=1&version=v16.0"
-  nonce="tdE82UFR"></script>
 
 </html>
